dist/1.0/bin/sample/retrieveUnpackaged/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Customer Care Colorado</fullName>
        <description>Created in GTS Colorado project, sprint 1</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Done</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Postponed</fullName>
        </values>
        <values>
            <fullName>Reopened</fullName>
        </values>
        <values>
            <fullName>Waiting for customer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Customer Care Colorado NEW</fullName>
        <description>CARE_CZ_103 Statuses &amp; SFCD/OC:TT integration</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Operation</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Postponed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>General</fullName>
        <description>General TT process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Irresolvable</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>Closed - Unresolvable</fullName>
        </values>
        <values>
            <fullName>Done</fullName>
        </values>
        <values>
            <fullName>Escalated Internally</fullName>
        </values>
        <values>
            <fullName>Escalated To Carrier</fullName>
        </values>
        <values>
            <fullName>Escalated To Vendor</fullName>
        </values>
        <values>
            <fullName>In progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending Customer Action</fullName>
        </values>
        <values>
            <fullName>Reopened</fullName>
        </values>
        <values>
            <fullName>Verified</fullName>
        </values>
        <values>
            <fullName>Waiting for customer</fullName>
        </values>
        <values>
            <fullName>Waiting for supplier</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountSearch__c</fullName>
        <description>Technical field which contains Account Name, filled by WF and used for case searching via Account Name</description>
        <inlineHelpText>Technical field which contains Account Name, filled by WF and used for case searching via Account Name</inlineHelpText>
        <label>AccountSearch</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Failure_Beginning__c</fullName>
        <description>CARE_CZ_112 Technical Data Integration (OC:TT -&gt; SFDC)</description>
        <inlineHelpText>Date when technical failure has started. Send from OCTT.</inlineHelpText>
        <label>Actual Failure Beginning</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Additional_Description__c</fullName>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <inlineHelpText>Extended complaint description</inlineHelpText>
        <label>Additional Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Allow_Multiservices__c</fullName>
        <description>Technical field used for validations on triggers.</description>
        <formula>If($RecordType.DeveloperName = &apos;Technical_Colorado&apos;,&apos;FALSE&apos;,&apos;TRUE&apos;)</formula>
        <inlineHelpText>Technical field used for validations.</inlineHelpText>
        <label>Allow Multiservices</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <description>User responsible for the Case</description>
        <inlineHelpText>User responsible for the Case</inlineHelpText>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Before_Accept_Age__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Calculated (in trigger CalculateBusinessHoursAges) time between create and first accept of case.</description>
        <inlineHelpText>Calculated time between create and first accept of case.</inlineHelpText>
        <label>Case Age before acceptation</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <description>Billing Account related with this Case</description>
        <inlineHelpText>Billing Account related with this Case</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>Billing_Accounts__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_End_Date__c</fullName>
        <description>Field for global Billing End Date modification (used on RelateCaseComponent page);</description>
        <inlineHelpText>Field for global Billing End Date modification (used on RelateCaseComponent page);</inlineHelpText>
        <label>Billing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CContract__c</fullName>
        <label>Contract (custom)</label>
        <referenceTo>CContract__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Care_Person__c</fullName>
        <description>CARE_CZ_110_ Care_person</description>
        <formula>Account.Care_Person__r.FirstName + &apos; &apos; + Account.Care_Person__r.LastName</formula>
        <inlineHelpText>Person who takes operational care of this customer</inlineHelpText>
        <label>Care Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseTeamMembersIDs__c</fullName>
        <description>Technical field; Field to store Case Team Memebers ID&apos;s</description>
        <inlineHelpText>Technical field; Field to store Case Team Memebers ID&apos;s</inlineHelpText>
        <label>CaseTeamMembersIDs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Age_In_Business_Hours__c</fullName>
        <description>The total case age in business hours from open to close.</description>
        <inlineHelpText>The total case age in business hours from open to close.</inlineHelpText>
        <label>Case Age In Business Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age_in_On_Hold__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Calculated (in trigger CalculateBusinessHoursAges) time how much time case stay in On Hold status.</description>
        <inlineHelpText>Calculated time how much time case stay in On Hold status.</inlineHelpText>
        <label>Time in On Hold</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Relation to Partner Account which informs that the Case has ben registered by given Partner</description>
        <inlineHelpText>Relation to Partner Account which informs that the Case has ben registered by given Partner</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_age_in_support__c</fullName>
        <formula>Case_Age_In_Business_Hours__c -  Before_Accept_Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age In Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChangesNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of changes done after the last synch process. Technical field.</description>
        <inlineHelpText>Number of changes done after the last synch process. Technical field.</inlineHelpText>
        <label>ChangesNumber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Churn_Reason__c</fullName>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <inlineHelpText>Reason, why the customer want&apos;s to terminate the service(s)</inlineHelpText>
        <label>Churn Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Billing problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality of service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad technical support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low network capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No network coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad sales care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad customer care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient service features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unbeatable price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile converged offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other technology preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving to competitor area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doubled billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer needed service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated by GTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KIVS planned churn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason not told</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service administrative closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End-user disconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downsizing business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building own infrastructure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Churn_Result__c</fullName>
        <description>Final result of churn process and services to be terminated</description>
        <inlineHelpText>Final result of churn process and services to be terminated</inlineHelpText>
        <label>Churn Result</label>
        <picklist>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claim_Received_Date__c</fullName>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <inlineHelpText>Date when customer complaint has been received. Used for reporting.</inlineHelpText>
        <label>Claim Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Result__c</fullName>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <inlineHelpText>User&apos;s complaint final result.</inlineHelpText>
        <label>Claim Result</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closure_Code__c</fullName>
        <description>Case closing reason. Integrated with OCTT.</description>
        <inlineHelpText>Case closing reason. Integrated with OCTT.</inlineHelpText>
        <label>Closure Code</label>
        <picklist>
            <picklistValues>
                <fullName>Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure - solved by NOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for RFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicity / Created by mistake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compensation_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <inlineHelpText>Amount which needs to be paid for customer as a compensation (ie. In case of problems with the service). Used for reporting.</inlineHelpText>
        <label>Compensation Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Compensation_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status of the componensation</description>
        <inlineHelpText>Status of the componensation</inlineHelpText>
        <label>Compensation Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compensation_Summary__c</fullName>
        <description>Desciption how the compensation has been calculated / rejected</description>
        <inlineHelpText>Desciption how the compensation has been calculated / rejected</inlineHelpText>
        <label>Compensation Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Price__c</fullName>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <inlineHelpText>Used for termination cases. Stores the competitor&apos;s price of the service, which has replaced the GTS installation.</inlineHelpText>
        <label>Competitor&apos;s Price</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_Product__c</fullName>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <inlineHelpText>Used for termination cases. Stores the competitor&apos;s product name of the service, which has replaced the GTS service installation.</inlineHelpText>
        <label>Competitor&apos;s Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Technology__c</fullName>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <inlineHelpText>Used for termination cases. Stores the competitor&apos;s technology name of the service, which has replaced the GTS service installation.</inlineHelpText>
        <label>Competitor&apos;s Technology</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPS/CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satellite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fibre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP telephony</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <inlineHelpText>Used for termination cases. Stores the competitor&apos;s name, which has replaced the GTS service installation.</inlineHelpText>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>CZ_Broadnet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ_CRa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ_EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ_E-Tel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ_Local_WiFi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ_Local Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ_Euphony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ_Tiscali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ_T-Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ_Telefonica O2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ_UPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ_Vodafone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ_Volny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ_Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO_Romtelecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO_RDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO_UPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO_Euroweb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO_Ines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO_Allnet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO_Digicom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO_SN Radiocomunicatii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO_Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO_ROlink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO_Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO_Vodafone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO_Media SAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO_Idilis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO_Dial Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO_AdNet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Component_Circuit_ID__c</fullName>
        <description>Used for customer&apos;s correspondence in Email templates; Filled manually by SFDC users.</description>
        <formula>Service_Component__r.Circuit_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for customer&apos;s correspondence in Email templates; Filled manually by SFDC users.</inlineHelpText>
        <label>Component Circuit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Sent_Date__c</fullName>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <inlineHelpText>Date when complaint confirmation has been send to the Customer. Used for reporting.</inlineHelpText>
        <label>Confirmation Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Phone_No__c</fullName>
        <description>Contact phone no stored in OCTT</description>
        <inlineHelpText>Contact phone no stored in OCTT</inlineHelpText>
        <label>Contact Phone No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_info__c</fullName>
        <description>Contact name stored in OCTT</description>
        <inlineHelpText>Contact name stored in OCTT</inlineHelpText>
        <label>Contact&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_Email__c</fullName>
        <description>Contact&apos;s e-mail address stored in OCTT</description>
        <inlineHelpText>Contact&apos;s e-mail address stored in OCTT</inlineHelpText>
        <label>Contact&apos;s Email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>Contract related with this case. [old field replaced by Ccontract__c]</description>
        <inlineHelpText>Contract related with this case. [old field replaced by Ccontract__c]</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Old technical field which were responsible for sending notifications to Case Team members.</description>
        <inlineHelpText>Old technical field which were responsible for sending notifications to Case Team members.</inlineHelpText>
        <label>Notify Case Team Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_in_OCTT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the TT has been already created in OCTT or not;</description>
        <inlineHelpText>Specifies if the TT has been already created in OCTT or not</inlineHelpText>
        <label>Created in OCTT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_in_OCTT_by__c</fullName>
        <description>Specified the OCTT user which created the case. Filled only when the case came from OCTT system.</description>
        <inlineHelpText>Specified the OCTT user which created the case. Filled only when the case came from OCTT system.</inlineHelpText>
        <label>Created in OCTT by</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Creation_Date__c</fullName>
        <description>Field used to store creation date for TTs which come from OCTT system;</description>
        <inlineHelpText>Field used to store creation date for TTs which come from OCTT system;</inlineHelpText>
        <label>Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <description>Customer for which this case has been created by Partner.</description>
        <inlineHelpText>Customer for which this case has been created by Partner.</inlineHelpText>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_For_Statement__c</fullName>
        <description>CARE_CZ_112 Technical Data Integration (OC:TT -&gt; SFDC)</description>
        <inlineHelpText>Email address to which Case statement should be send</inlineHelpText>
        <label>Email For Statement</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Background logic field determines if email for Mass Outage notification was already generated</description>
        <inlineHelpText>Background logic field determines if email for Mass Outage notification was already generated</inlineHelpText>
        <label>Email Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Outage_Time_Unit_English__c</fullName>
        <description>Unit of estimated outage time in English</description>
        <inlineHelpText>Unit of estimated outage time in English</inlineHelpText>
        <label>Estimated Outage Time Unit (English)</label>
        <picklist>
            <picklistValues>
                <fullName>minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Outage_Time_Unit_Local__c</fullName>
        <description>Estimated outage time unit in Local language</description>
        <inlineHelpText>Estimated outage time unit in Local language</inlineHelpText>
        <label>Estimated Outage Time Unit (Local)</label>
        <picklist>
            <picklistValues>
                <fullName>perc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>óra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hét</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hónap</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Outage_Time__c</fullName>
        <description>How long Outage will take</description>
        <inlineHelpText>How long Outage will take</inlineHelpText>
        <label>Estimated Outage Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Failure_Beginning__c</fullName>
        <description>CARE_CZ_112 Technical Data Integration (OC:TT -&gt; SFDC)</description>
        <inlineHelpText>Date when service failure has started. Used for compensation calulcation and reporting.</inlineHelpText>
        <label>Failure Beginning</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Failure_Cause__c</fullName>
        <description>CARE_CZ_112 Technical Data Integration (OC:TT -&gt; SFDC)</description>
        <inlineHelpText>Cause of service failure. Retreived from OCTT</inlineHelpText>
        <label>Failure Cause</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Duration__c</fullName>
        <description>CARE_CZ_112 Technical Data Integration (OC:TT -&gt; SFDC)</description>
        <inlineHelpText>Duration of service failure. Used for compensation calulcation and reporting. Retreived from OCTT.</inlineHelpText>
        <label>Failure Duration</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_End__c</fullName>
        <description>CARE_CZ_112 Technical Data Integration (OC:TT -&gt; SFDC)</description>
        <inlineHelpText>Date when service failure has ended. Used for compensation calulcation and reporting.</inlineHelpText>
        <label>Failure End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Failure_Raised_By__c</fullName>
        <description>CARE_CZ_112 Technical Data Integration (OC:TT -&gt; SFDC)</description>
        <inlineHelpText>Specifies who reaised the service failure. Retreived from OCTT.</inlineHelpText>
        <label>Failure Raised By</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Specification__c</fullName>
        <description>CARE_CZ_112 Technical Data Integration (OC:TT -&gt; SFDC)</description>
        <inlineHelpText>Failure description. Retreived from OCTT.</inlineHelpText>
        <label>Failure Specification</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Impact_Date__c</fullName>
        <description>Complaint Case specific field - Colorado Sprint 3</description>
        <inlineHelpText>Complaint&apos;s financial impact date</inlineHelpText>
        <label>Financial Impact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical field used for customer follow up notifications</description>
        <inlineHelpText>Technical field used for customer follow up notifications</inlineHelpText>
        <label>Follow up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_ID__c</fullName>
        <description>Technical field. Full length internal SFDC id, used for building external links to OCTT system.</description>
        <inlineHelpText>Technical field. Full length internal SFDC id, used for building external links to OCTT system.</inlineHelpText>
        <label>Full ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <description>Stores the last time the status changed -- used by the Case Business Hours Tools package.</description>
        <inlineHelpText>Stores the last time the status changed -- used by the Case Business Hours Tools package</inlineHelpText>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Synch_Attempt__c</fullName>
        <description>Datetime of last TT synchronization with OCTT; (GTS Colorado Sprint 1)</description>
        <inlineHelpText>Datetime of last TT synchronization with OCTT</inlineHelpText>
        <label>Last Synch Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Link_to_OCTT__c</fullName>
        <description>Link to corresponding case in OCTT system</description>
        <formula>if(Created_in_OCTT__c, 
if( $Organization.Id=&apos;00D200000008d5u&apos;,HYPERLINK(&quot;https://occe.gtsce.com/occe2cat/userticket/efind/SFDC/&quot; &amp; Full_ID__c , &quot;Click here&quot;, &quot;_blank&quot;), 
HYPERLINK(&quot;https://demo.in.gtsgroup.cz/occe2cat/userticket/efind/SFDC/&quot; &amp; Full_ID__c , &quot;Click here&quot; , &quot;_blank&quot;)),&quot;&quot;)</formula>
        <inlineHelpText>Link to corresponding case in OCTT system</inlineHelpText>
        <label>Link to OCTT</label>
        <type>Text</type>
    </fields>
</CustomObject>